--- a/.github/workflows/lenovo_newifi-d2.yml
+++ b/.github/workflows/lenovo_newifi-d2.yml
@@ -10,9 +10,9 @@ on:
   release:
     types: [published]
 
-  #push:
-    #branches: 
-      #- master
+  push:
+    branches: 
+      - master
 
   #schedule:
   #  - cron: 0 8 * * 5
@@ -55,6 +55,13 @@ jobs:
         sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev patch unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex node-uglify gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx-ucl libelf-dev autoconf automake libtool autopoint device-tree-compiler libuv-dev
         sudo -E apt-get -y autoremove --purge
         sudo -E apt-get clean
+
+    - name: Extra Packages
+      run: |
+        cd package
+        mkdir openwrt-packages
+        cd openwrt-packages
+		git clone https://github.com/openwrt-develop/luci-theme-atmaterial.git
 
     - name: Clone source code
       env: 
