--- a/.github/workflows/Build_r619ac.yml
+++ b/.github/workflows/Build_r619ac.yml
@@ -14,8 +14,8 @@ on:
     branches: 
       - master
 
-  #schedule:
-  #  - cron: 0 8 * * 5
+  schedule:
+    - cron: 0 21 * * *
   
   #watch:
   #  types: [started]
