--- a/.github/workflows/Build_r619ac.yml
+++ b/.github/workflows/Build_r619ac.yml
@@ -7,15 +7,15 @@
 name: Build_r619ac
 
 on: 
-  release:
-    types: [published]
+  #release:
+  #  types: [published]
 
   push:
     branches: 
       - master
 
-  schedule:
-    - cron: 0 21 * * *
+ # schedule:
+   # - cron: 0 21 * * *
   
   #watch:
   #  types: [started]
